[package]
name = "thachoppa"
version = "0.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbp = { git = "https://github.com/swift-nav/libsbp/", tag = "v2.8.0" }
